updates readme and swagger docs
